# storyteller

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  main.yml
docs/developers/: architecture.md  setup.md
docs/llm/: context.md  flet_api.md
docs/planning/: gui-layout.md  phase-3-image-generation.md  roadmap.md
docs/user/: getting-started.md
prototypes/mflux_test/: README.md  generate_test_images.py  pyproject.toml  requirements.txt
src/storyteller/: __init__.py
src/storyteller/core/: __init__.py  engine.py  persistence.py  story.py
src/storyteller/generation/: __init__.py  image.py  prompts.py  styles.py  text.py
src/storyteller/ui/: __init__.py  app.py  state.py  theme.py
src/storyteller/ui/components/: __init__.py  app_bar.py  status_bar.py
src/storyteller/ui/dialogs/: __init__.py  character.py  new_story.py  progress.py
src/storyteller/ui/views/: __init__.py  create.py  preview.py  settings.py
tests/: __init__.py  conftest.py
tests/test_core/: __init__.py  test_engine.py  test_persistence.py  test_story.py
tests/test_generation/: __init__.py  test_image.py  test_prompts.py  test_styles.py  test_text.py
