[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storyteller"
version = "0.1.0"
description = "AI-powered children's storybook creator for macOS"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Horst Herb" }
]
keywords = [
    "children",
    "storybook",
    "ai",
    "illustration",
    "macos",
    "apple-silicon",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing",
]
dependencies = [
    "flet[all]==0.80.1",
    "mflux>=0.12.1",
    "ollama>=0.6.1",
    "Pillow>=10.0.0",
    "pip>=25.3",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
generation = [
    "mflux>=0.9.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
all = [
    "storyteller[generation,dev]",
]

[project.scripts]
storyteller = "storyteller.ui.app:run"

[project.urls]
Homepage = "https://github.com/hherb/storyteller"
Repository = "https://github.com/hherb/storyteller"
Issues = "https://github.com/hherb/storyteller/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/storyteller"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["storyteller"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "flet.*",
    "mflux.*",
    "ollama.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["src/storyteller"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
